fixes:homeScreen:banner overlap productCard

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -634,6 +634,7 @@ table th {
   width: 100%;
   height: 100%;
   background: url("./img/banner-bestseller.jpg") center 0 no-repeat;
+  z-index: -1;
 }
 .home-screen .home__banner.bestseller {
   position: absolute;
